--- a/FTPDistribuido/pyproject.toml
+++ b/FTPDistribuido/pyproject.toml
@@ -10,6 +10,7 @@ PyQt5 = "^5.15.0"
 PyQtWebEngine = "^5.15.0"
 asyncqt = "^0.8.0"
 aiostream = "^0.4.1"
+lenses = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^19.10b0", allow-prereleases = true}
